pxc/tests/test_025_slice/strref2.px
public namespace strref2;
import core::common -;

function string foo(strlit s)
{
  string r = s;
  return r;
}

function void t1()
{
  string sv = "hoge";
  cstrref svref = sv;
  foo(svref); // error: strref to strlit
  println("done\n");
}

t1();

